feat: waited too long to commit, so a bunch of shit

--- a/src/styles/_color.scss
+++ b/src/styles/_color.scss
@@ -19,12 +19,12 @@ $-palettes: (
   ),
   "grey": (
     lightest: #ebeef0,
-    light: #cbd4de,
+    light: #c9ccce,
     lighter: #b8c3c9,
     default: #8697a7,
-    darker: #737e8c,
-    dark: #4a5e73,
-    darkest: #345068,
+    darker: #2f3944,
+    dark: #1c232b,
+    darkest: #14171b,
   ),
 );
 
