--- a/src/styles/blocks/index.scss
+++ b/src/styles/blocks/index.scss
@@ -1,2 +1,6 @@
-@use 'layout';
-@use 'collapsible';
+@use './layout';
+@use './collapsible';
+@use './input-search';
+@use './video-index';
+@use './video-card';
+@use './youtube-player';
