--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,6 +1,7 @@
-@use 'mediaqueries';
-@use 'color';
-@use 'css-reset-udyux';
-@use 'vendors';
-@use 'base';
-@use 'blocks';
+@use './mediaqueries';
+@use './color';
+@use './css-reset-udyux';
+@use './vendors';
+@use './base';
+@use './blocks';
+@use './transitions';
