--- a/src/styles/utils/index.scss
+++ b/src/styles/utils/index.scss
@@ -1,9 +1,8 @@
-@forward 'aspect-ratio';
-@forward 'bg';
-@forward 'placeholder';
-@forward 'reduce-motion';
-@forward 'rem';
-@forward 'easings';
-@forward 'typography';
-@forward 'row-spans';
-@forward 'multiline-ellipsis';
+@forward './aspect-ratio';
+@forward './bg';
+@forward './reduce-motion';
+@forward './rem';
+@forward './easings';
+@forward './typography';
+@forward './row-spans';
+@forward './multiline-ellipsis';
