--- a/src/styles/base/_body.scss
+++ b/src/styles/base/_body.scss
@@ -1,5 +1,5 @@
 @use '../utils' as *;
-@use '../color';
+@use '../color' as *;
 
 body {
   @include font-default;
@@ -7,6 +7,7 @@ body {
   overflow-x: hidden;
   width: 100%;
   height: 100%;
-  color: color.hex(grey, lightest);
-  background-color: color.hex(grey, darkest);
+  color: hex(grey, darkest);
+  background-color: hex(grey, lightest);
+  background-image: radial-gradient(farthest-side at center, white, transparent);
 }
