feat: coming-soon

--- a/src/styles/_color.scss
+++ b/src/styles/_color.scss
@@ -3,28 +3,13 @@
 
 $-palettes: (
   "primary": (
-    lightest: #60c7ed,
-    light: #42b6e1,
-    lighter: #4faed0,
-    default: #2399c4,
-    darker: #0e2f4f,
-    dark: #072542,
-    darkest: #05192c,
-  ),
-  "status": (
-    default: #8697a7,
-    error: #e63946,
-    warn: #fdb05e,
-    success: #26bf80,
+    light: #faecdc,
+    default: #d0a574,
+    dark: #b68e60,
   ),
   "grey": (
-    lightest: #ebeef0,
-    light: #c9ccce,
-    lighter: #b8c3c9,
-    default: #8697a7,
-    darker: #2f3944,
-    dark: #1c232b,
-    darkest: #14171b,
+    default: #2c2c31,
+    dark: #171719,
   ),
 );
 
