--- a/src/styles/blocks/index.scss
+++ b/src/styles/blocks/index.scss
@@ -1,6 +1,8 @@
 @use './layout';
+@use './button';
 @use './collapsible';
 @use './input-search';
 @use './video-index';
 @use './video-card';
 @use './youtube-player';
+@use './coming-soon';
