--- a/src/styles/base/_body.scss
+++ b/src/styles/base/_body.scss
@@ -2,12 +2,9 @@
 @use '../color' as *;
 
 body {
-  @include font-default;
   @include type-body;
   overflow-x: hidden;
   width: 100%;
   height: 100%;
-  color: hex(grey, darkest);
-  background-color: hex(grey, lightest);
-  background-image: radial-gradient(farthest-side at center, white, transparent);
+  color: white;
 }
