--- a/src/styles/utils/_typography.scss
+++ b/src/styles/utils/_typography.scss
@@ -1,40 +1,28 @@
 @use 'rem' as *;
 
 @mixin font-default {
-  font-family: 'Helvetica Neue', Helvetica, arial, sans-serif;
+  font-family: Prompt, arial, sans-serif;
+}
+
+@mixin font-display {
+  font-family: Unbounded, Arial, Helvetica, sans-serif;
 }
 
 @mixin type-body {
+  @include font-default;
   font-size: rem(16);
   font-weight: 400;
 }
 
-@mixin type-body-bold {
-  font-size: rem(16);
-  font-weight: 500;
-}
-
 @mixin type-title {
+  @include font-display;
   font-size: rem(26);
-  font-weight: 700;
-
-  @media (--laptop) {
-    font-size: rem(36);
-  }
-}
-
-@mixin type-banner-large {
-  font-size: rem(30);
   font-weight: 700;
 }
 
 @mixin type-banner {
-  font-size: rem(24);
-  font-weight: 700;
-}
-
-@mixin type-section {
-  font-size: rem(22);
+  @include font-display;
+  font-size: rem(80);
   font-weight: 700;
 }
 
@@ -43,71 +31,7 @@
   font-weight: 700;
 }
 
-@mixin type-header {
-  font-size: rem(18);
-  font-weight: 700;
-}
-
-@mixin type-output {
-  font-size: rem(16);
-  font-weight: 700;
-}
-
-@mixin type-text-bold {
-  font-size: rem(14);
-  font-weight: 900;
-}
-
-@mixin type-label-bold {
-  font-size: rem(14);
-  font-weight: 700;
-}
-
-@mixin type-label {
-  font-size: rem(14);
+@mixin type-button {
+  font-size: rem(15);
   font-weight: 500;
-}
-
-@mixin type-input {
-  font-weight: 600;
-}
-
-@mixin type-text {
-  font-size: rem(14);
-  font-weight: 400;
-}
-
-@mixin type-label-small {
-  font-size: rem(13);
-  font-weight: 700;
-}
-
-@mixin type-tag {
-  font-size: rem(13);
-  font-weight: 500;
-}
-
-@mixin type-text-small {
-  font-size: rem(13);
-  font-weight: 400;
-}
-
-@mixin type-caption {
-  font-size: rem(12);
-  font-weight: 500;
-}
-
-@mixin type-legend {
-  font-size: rem(11);
-  font-weight: 900;
-}
-
-@mixin type-notification {
-  font-size: rem(10);
-  font-weight: 900;
-}
-
-@mixin type-notification-small {
-  font-size: rem(8);
-  font-weight: 900;
 }
