feat: coming-soon

--- a/src/styles/blocks/_button.scss
+++ b/src/styles/blocks/_button.scss
@@ -12,4 +12,10 @@
   &:hover {
     background-color: hex(primary, dark);
   }
+
+  &.-borderless {
+    height: auto;
+    padding: 0;
+    background-color: transparent;
+  }
 }
