--- a/src/styles/blocks/_coming-soon.scss
+++ b/src/styles/blocks/_coming-soon.scss
@@ -25,7 +25,6 @@
     width: 100%;
     height: 100%;
     background-image: var(--image);
-    transform: var(--scale);
   }
 
   &__video {
@@ -48,17 +47,40 @@
     justify-content: space-between;
     width: 100%;
     height: 100%;
-    padding: rem(40) rem(96) rem(34);
+    padding: rem(34) rem(24);
     background-color: alpha(grey, dark, 0.75);
+
+    @media (--tablet) {
+      padding: rem(40) rem(96) rem(34);
+    }
   }
 
   &__row {
     display: flex;
+    align-items: center;
     justify-content: space-between;
   }
 
   &__logo {
-    width: rem(320);
+    width: rem(240);
+
+    @media (--tablet) {
+      width: rem(320);
+    }
+  }
+
+  &__menu {
+    display: flex;
+    align-items: center;
+  }
+
+  &__menu-item + &__menu-item {
+    display: none;
+
+    @media (--tablet) {
+      display: inline-block;
+      margin-left: rem(32);
+    }
   }
 
   &__center {
@@ -76,8 +98,19 @@
 
   &__text {
     width: 100%;
-    padding: 0 rem(32);
     line-height: 1.75;
+
+    @media (--tablet) {
+      padding: 0 rem(32);
+    }
+  }
+
+  &__social {
+    display: none;
+
+    @media (--tablet) {
+      display: block;
+    }
   }
 
   &__link:hover {
