--- a/src/styles/blocks/_coming-soon.scss
+++ b/src/styles/blocks/_coming-soon.scss
@@ -47,10 +47,10 @@
     justify-content: space-between;
     width: 100%;
     height: 100%;
-    padding: rem(34) rem(24);
+    padding: rem(24);
     background-color: alpha(grey, dark, 0.75);
 
-    @media (--tablet) {
+    @media (--laptop) {
       padding: rem(40) rem(96) rem(34);
     }
   }
@@ -64,7 +64,7 @@
   &__logo {
     width: rem(240);
 
-    @media (--tablet) {
+    @media (--laptop) {
       width: rem(320);
     }
   }
@@ -77,7 +77,7 @@
   &__menu-item + &__menu-item {
     display: none;
 
-    @media (--tablet) {
+    @media (--laptop) {
       display: inline-block;
       margin-left: rem(32);
     }
@@ -93,14 +93,19 @@
 
   &__banner {
     @include type-banner;
-    margin-bottom: rem(32);
+    margin-bottom: rem(24);
+
+    @media (--laptop) {
+      margin-bottom: rem(32);
+    }
   }
 
   &__text {
     width: 100%;
+    padding: 0 rem(16);
     line-height: 1.75;
 
-    @media (--tablet) {
+    @media (--laptop) {
       padding: 0 rem(32);
     }
   }
@@ -108,7 +113,7 @@
   &__social {
     display: none;
 
-    @media (--tablet) {
+    @media (--laptop) {
       display: block;
     }
   }
