--- a/src/styles/blocks/_coming-soon.scss
+++ b/src/styles/blocks/_coming-soon.scss
@@ -2,40 +2,16 @@
 @use '../color' as *;
 
 .coming-soon {
+  overflow: hidden;
   width: 100%;
   height: 100%;
 
-  &__background {
-    @include aspect-ratio(16, 9);
-    position: relative;
-    display: flex;
-    overflow: hidden;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    height: 100%;
-    pointer-events: none;
-  }
-
-  &__poster {
-    @include bg-cover;
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-image: var(--image);
-  }
-
   &__video {
-    position: relative;
-    opacity: 0;
-    transform: var(--scale);
-    transition: opacity 100ms linear 200ms;
-
-    &.-ready {
-      opacity: 1;
-    }
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+    pointer-events: none;
   }
 
   &__content {
