--- a/src/styles/blocks/_coming-soon.scss
+++ b/src/styles/blocks/_coming-soon.scss
@@ -2,16 +2,24 @@
 @use '../color' as *;
 
 .coming-soon {
+  @include bg-cover;
   overflow: hidden;
   width: 100%;
   height: 100%;
+  background-image: var(--poster, none);
 
   &__video {
     width: 100%;
     height: 100%;
     object-fit: cover;
     object-position: center;
+    opacity: 0;
     pointer-events: none;
+    transition: opacity 150ms linear 350ms;
+
+    &.-playing {
+      opacity: 1;
+    }
   }
 
   &__content {
