fix: remove video opacity on laptop and up

--- a/src/styles/blocks/_coming-soon.scss
+++ b/src/styles/blocks/_coming-soon.scss
@@ -17,6 +17,10 @@
     pointer-events: none;
     transition: opacity 150ms linear 350ms;
 
+    @media (--laptop) {
+      opacity: 1;
+    }
+
     &.-playing {
       opacity: 1;
     }
